node-app-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app-green
  labels:
    app: node-app
    version: green
spec:
  replicas: 3
  selector:
    matchLabels:
      app: node-app
      version: green
  template:
    metadata:
      labels:
        app: node-app
        version: green
    spec:
      containers:
        - name: node-app
          image: node-app:latest
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
