flask-app-blue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-blue-service
spec:
  selector:
    app: flask-app
    version: blue
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
