node-app-blue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-app-green-service
spec:
  selector:
    app: node-app
    version: green
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
