node-app-green-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-green-service
spec:
  selector:
    app: flask-app
    version: green
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
